2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/m68k.h: Move set cacr, acr0, acr1 routines here to get
	them out of a BSP.

2008-09-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Do not define boolean, single_precision,
	double_precision unless RTEMS_DEPRECATED_TYPES is given.

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c, rtems/score/cpu.h: Remove extraneous spaces.

2008-08-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Include stdbool.h.
	Use bool as base-type for boolean.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Fix type when initializing FP context.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* cpu.c, rtems/score/cpu.h: Add extern for bfffo table and rename it to
	indicate that it is specific to this architecture.

2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Correct prototype of Idle threads.

2008-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* rtems/m68k/m68360.h: added port b pin definitions for SPI

2008-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/m68k.h: There is no point in defining the maximum
	priorities to 255. priority.h will default it to this.

2008-06-10	Chris Johns <chrisj@rtems.org>

	* cpu_asm.S: Add Coldfire FPU support.
	* rtems/score/m68k.h: Change the Coldfire CPU defines to be based
	on the instruction set. Add Tiny RTEMS support to the small memory
	model RTEMS processors.
	* rtems/score/cpu.h: Handle the new Tiny RTEMS support.

2008-06-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Add CPU_SIMPLE_VECTORED_INTERRUPTS porting
	parameter to indicate that the port uses the Simple Vectored
	Interrupt model or the Programmable Interrupt Controller Model. The
	PIC model is implemented primarily in the BSP and it is responsible
	for all memory allocation.

2008-01-22	Joel Sherrill <joel.sherrill@OARcorp.com>
