@@ -1,3 +1,8 @@
+2008-12-17	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* rtems/score/m68k.h: Don't include rtems/score/types.h,
+	rtems/stdint.h.
+
 2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* rtems/score/m68k.h: Move set cacr, acr0, acr1 routines here to get
